src/objects/CP_Chatter_Pulse__c.object
<CustomObject>
    <description>Reporting statistics for Chatter Pulse</description>
    <fields>
        <fullName>Chatter_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chatter User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CP_Chatter_Pulse</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Record__c</fullName>
        <label>Related Record</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Date__c</fullName>
        <description>Reporting date for Chatter statistics</description>
        <label>Reporting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Update_Type__c</fullName>
        <label>Update Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Chatter Pulse</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Chatter_User__c</columns>
        <columns>Reporting_Date__c</columns>
        <columns>Update_Type__c</columns>
        <columns>Related_Record__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{0000000000}</displayFormat>
        <label>CP: Chatter Pulse ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chatter Pulse</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>